# slint-embassy-stm32u5g9j-dk2

./: Cargo.toml  README.md
slint_generated/: Cargo.toml
