[package]
name = "slint-embassy-stm32u5g9j-dk2"
version = "0.1.0"
edition = "2021"
authors = ["David Haig"]
readme = "README.md"
repository = "https://github.com/ninjasource/slint-embassy-stm32u5g9j-dk2.git"
license = "Apache-2.0"

[dependencies]
log = "0.4"
defmt = { version = "0.3", optional = true, features = ["alloc"] }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", optional = true, features = ["print-defmt"] }
cortex-m = { version = "0.7.7", optional = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.3", optional = true }
slint-generated = { path = "./slint_generated" }
embedded-alloc = { version = "0.5", optional = true }
heapless = { version = "0.8", default-features = false, features = [
    "defmt-03",
] }
tinybmp = { version = "0.5" }
static_cell = { version = "2", optional = true }

#slint = { version = "=1.9.0", path = "../../api/rs/slint", default-features = false, features = [
#    "compat-1-2",
#    "unsafe-single-threaded",
#    "libm",
#    "renderer-software",
#] }
#i-slint-core-macros = { version = "=1.9.0", path = "../../internal/core-macros" }

slint = { version = "1.8.0", default-features = false, features = [
    "compat-1-0",
    "unsafe-single-threaded",
    "libm",
] }
i-slint-core-macros = { version = "1.8.0" }

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", commit = "72976fe", optional = true, features = [
    "stm32u5g9zj",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
    "time",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", commit = "72976fe", optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", commit = "72976fe", optional = true, features = [
    "task-arena-size-32768",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", commit = "72976fe", optional = true }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", commit = "72976fe", optional = true }

env_logger = { version = "0.9.0", optional = true }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", commit = "400e033411b239de10b680f20de800dcb70e9ade", optional = true }
object-pool = { version = "0.6.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
gt911 = { version = "0.1", features = ["defmt"], optional = true }

[features]
default = []
mcu = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "cortex-m",
    "cortex-m-rt",
    "embassy-stm32",
    "embassy-stm32/defmt",
    "embassy-sync",
    "embassy-sync/defmt",
    "embassy-executor",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/defmt",
    "embassy-time",
    "embassy-time/tick-hz-32_768",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-futures",
    "embedded-alloc",
    "embedded-hal",
    "gt911",
]

simulator = [
    "slint/renderer-software",
    "slint/backend-winit",
    "slint/std",
    "embassy-executor/arch-std",
    "embassy-time/std",
    "embassy-futures",
    "embassy-time",
    "embassy-time/std",
    "embassy-sync",
    "env_logger",
    "sdl2",
    "object-pool",
    "static_cell",
]

[profile.release]
debug = true    # required for decent panic messages
opt-level = "s"
lto = "thin"

[[bin]]
name = "ui_mcu"
required-features = ["mcu"]

[[bin]]
name = "ui_simulator"
required-features = ["simulator"]
